NIHVIVO-1562 Sort properties and methods of template model objects in dump. This commit contains a regression: exposureLevel has been removed, so public methods that are hidden by the BeansWrapper are still included in the dump. Will be corrected in an upcoming commit.

--- a/webapp/web/css/dump.css
+++ b/webapp/web/css/dump.css
@@ -42,6 +42,7 @@
     list-style: decimal inside none;
 }
 
-.var .var {
+.dump .var .var,
+.dump.datamodel .var .var {
     margin-left: 1.5em;
 }
